add widget layout header

--- a/src/app/styles/fonts.css
+++ b/src/app/styles/fonts.css
@@ -29,7 +29,7 @@
 }
 
 @font-face {
-    src: url('../../../public/fonts/KinoMTStd.ttf') format('truetype');
+    src: url('../../../public/fonts/Kino-Regular.ttf') format('truetype');
     font-family: 'Kino';
     font-weight: 400;
 }
