--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -31,7 +31,7 @@
   display: inline-block;
   align-self: flex-end;
   margin-bottom: 7px;
-  color: #175ef1;
+  color: var(--blue);
   font-family: "Kino", sans-serif;
   font-size: 24px;
   font-weight: 400;
@@ -46,14 +46,14 @@
 
 .titleMotivation {
   color: #f90;
-  font-family: Noto Sans;
+  font-family: var(--font);
   font-size: 36px;
   font-weight: 600;
 }
 
 .textMotivation {
-  color: #5f6a77;
-  font-family: Noto Sans;
+  color: var(--grey_1);
+  font-family: var(--font);
   font-size: 20px;
   font-weight: 400;
   margin-bottom: 14px;
